# lyric-workspace

./: .env.example  .gitignore  .vercelignore  DEVELOPMENT.md  README.md  STRIPE_SETUP.md  index.html  package-lock.json  package.json
public/: manifest.json  sw.js
scripts/: create-updater-manifest.mjs  publish-github-release.mjs
src/: App.jsx  Auth.jsx  Mobile.jsx  billing.js  design.css  main.jsx  nativeRecording.js  storage.js  supabase.js  sync.js  updater.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/: config.toml
supabase/functions/_shared/: cors.ts
supabase/functions/billing-return/: index.ts
supabase/functions/create-billing-portal-session/: index.ts
supabase/functions/create-checkout-session/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 202605170001_billing_profiles.sql
