[package]
name = "lyric-workspace"
version = "1.0.0"
description = "Lyric writing workspace"
authors = ["shimin1080"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lyric_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
base64 = "0.22"
cpal = "0.15"
hound = "3.5"
rand = "0.8"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
sha2 = "0.10"
url = "2.5"
